Fix tap highlight square on testimonial arrows on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -967,6 +967,7 @@ nav a[href="#kontakt"] {
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .testimonial-arrow:hover {
